<resources>
    <string name="app_name">F1 Standings</string>
    <string name="tab_drivers">Drivers</string>
    <string name="tab_races">Races</string>
    <string name="tab_teams">Teams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="races">races</string>
    <string name="teams">teams</string>
    <string name="driver_image">driver_image</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="openwebsite">openWebsite</string>
    <string name="nationality">nationality</string>
    <string name="drivers">drivers</string>
    <string name="back">back</string>
    <string name="position_points">Position/points</string>
    <string name="nationality_text">Nationality:</string>
    <string name="team_text">Team:</string>
</resources>