<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="16dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/driver_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/white"
                android:paddingBottom="20dp"
                android:layout_marginBottom="30dp"
                android:scaleType="centerCrop" />


        <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/name"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:layout_below="@+id/driver_image" />

        <TextView
                android:id="@+id/nationality_text"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/nationality_text"
                android:layout_below="@+id/name"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/nationality"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@+id/name"
                android:layout_toEndOf="@+id/nationality_text"
                android:contentDescription="@string/nationality" />


        <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/team_text"
                android:layout_below="@id/nationality_text"
                android:text="@string/team_text" />

        <TextView
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:layout_toEndOf="@id/team_text"
                android:id="@+id/team_name"
                android:layout_below="@+id/nationality_text" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/position_points"
                android:layout_below="@id/team_text"
                android:text="@string/position_points"
                android:textStyle="bold" />

        <TextView
                android:layout_height="50dp"
                android:layout_width="100dp"
                android:textStyle="bold"
                android:id="@+id/position"
                android:layout_below="@+id/team_name"
                android:layout_toEndOf="@id/position_points" />

        <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/points"
                android:layout_toEndOf="@+id/position"
                android:layout_below="@+id/team_name" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/share_button"
                android:contentDescription="@string/openwebsite"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
    </RelativeLayout>

</ScrollView>